# xilinx-power-monitor

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  INSTALL.txt  Makefile  README.md  README_CN.md  pyproject.toml  setup.py
.github/: toolchain-arm64.cmake  toolchain-zynqmp.cmake
.github/workflows/: build-python-wheel.yml  build-ubuntu-deb.yml  build-zynqmp-rpm.yml  publish-cargo.yml
bindings/python/: CMakeLists.txt  xlnpwmon_pybind.cpp
bindings/rust/: .gitignore  Cargo.toml  build.rs
bindings/rust/examples/: basic.rs  cpu_monitor.rs  matrix_multiply.rs
bindings/rust/src/: bridge.cpp  lib.rs
bindings/rust/tests/: test.rs
cmake/: xlnpwmon-config.cmake.in  xlnpwmon.pc.in
example/: c_example.c  cpp_example.cpp  matrix_multiply.cpp  matrix_multiply_cpp.cpp  python_example.py
include/xlnpwmon/: xlnpwmon++.hpp  xlnpwmon.h
python/xlnpwmon/: __init__.py  cli.py
scripts/: install_from_tarball.sh  package_tarball.sh
src/: xlnpwmon++.cpp  xlnpwmon.c  xlnpwmon_cli.c
tests/: test.py  test_c_api.cpp  test_cpp_api.cpp
